# grimoire

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: grimoire.rb
docs/: SPEC.md
scripts/: generate_fixtures.sh
src/: app.rs  main.rs
src/db/: items.rs  mod.rs  schema.rs  settings.rs
src/export/: claude.rs  mod.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
src/models/: category.rs  item.rs  mod.rs
src/ui/: ai_popup.rs  dialog.rs  edit_screen.rs  help_screen.rs  history_popup.rs  main_screen.rs  mod.rs  search.rs  settings_screen.rs  view_screen.rs
