[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
directories = "5.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
