[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Moigneu <guillaume@moigneu.com>"]
description = "A TUI for managing prompts, agents, and skills configuration"
license = "Apache-2.0"
repository = "https://github.com/gmoigneu/grimoire"
homepage = "https://github.com/gmoigneu/grimoire"
keywords = ["tui", "cli", "prompts", "llm", "ai"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
directories = "5.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
